# portfolio-api

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  .vercelignore  AGENTS.md  DEPLOYMENT.md  GEMINI.md  README.md  TESTING.md  WINDSURF.md  package-lock.json  package.json  quick-test.ps1  serverless.yml  test-extract.js  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: api-tests.yml
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
azure-functions/HttpTrigger1/: function.json  index.ts
go/: go.mod  main.go
go/data/: certification.go  changelog.go  contact.go  education.go  experience.go  faq.go  links.go  profile.go  project.go  skill.go  strong_point.go
go/handler/: portfolio.go  portfolio_test.go
go/model/: certification.go  changelog.go  contact.go  education.go  experience.go  faq.go  links.go  profile.go  project.go  response.go  (+2 more)
haskell/: package.yaml  stack.yaml
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/src/data/: certification.rs  changelog.rs  contact.rs  education.rs  experience.rs  faq.rs  links.rs  mod.rs  profile.rs  project.rs  skill.rs  strong_point.rs
rust/src/handler/: mod.rs  portfolio.rs
rust/src/model/: certification.rs  changelog.rs  contact.rs  education.rs  experience.rs  faq.rs  links.rs  mod.rs  profile.rs  project.rs  response.rs  skill.rs  strong_point.rs
rust/src/service/: mod.rs  pdf.rs
rust/tests/: api_tests.rs
scripts/: sync-public.mjs
src/: handler.ts  index.ts
ts/: .env.example  .eslintrc.cjs  package.json  tsconfig.json
(+157 files in other folders)
